--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,8 @@ body {
     right: 0; */
     width: 100%;
     height: 100vh;
-    background: url(/assets/img/resourceDataWeb/bg-img/bg_desktop.jpg) no-repeat;
+    /* background: url("/assets/img/resourceDataWeb/bg-img/bg_desktop.jpg") no-repeat; */
+    background: url("https://lh3.google.com/u/0/d/1daXFhp4jZjslULZnmVbPWuvzQN3pl5gh=w1920-h902-iv1") no-repeat;
     background-size: cover;
 }
 
@@ -103,7 +104,7 @@ body {
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    background: url(/assets/img/resourceDataWeb/avatar/avatar.jpg) no-repeat;
+    background: url("/assets/img/resourceDataWeb/avatar/avatar.jpg") no-repeat;
     background-size: cover;
     background-position: center;
     border: 2px solid;
@@ -204,7 +205,7 @@ body {
     width: 110px;
     height: 110px;
     border-radius: 50%;
-    background: url(/assets/img/resourceDataWeb/avatar/avatar.jpg) no-repeat;
+    background: url("/assets/img/resourceDataWeb/avatar/avatar.jpg") no-repeat;
     background-size: cover;
     background-position: center;
     border: 2px solid;
