--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,6 +117,7 @@ body {
 
 .home-section .intro {
     flex: 2;
+    font-weight: 500;
 }
 
 .home-section .intro {
@@ -237,6 +238,12 @@ body {
     border-radius: 16px;
 }
 
+.contact-section .contact-info .contact-link {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
 .contact-info .text-social {
     text-align: center;
     font-size: 20px;
@@ -270,7 +277,7 @@ body {
 
 .contact-qr .qr-text {
     text-align: center;
-    font-size: 24px;
+    font-size: 20px;
     text-transform: capitalize;
     font-weight: 600;
     color: #163853;
@@ -279,7 +286,7 @@ body {
 .contact-qr .qr-text p {
     border: 2px solid #000;
     display: inline-block;
-    padding: 8px 16px;
+    padding: 6px 12px;
     border-radius: 16px;
     height: 100%;
     width: auto;
