--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,6 +148,7 @@ body {
 
 .about-section .about-text h2 {
     text-align: center;
+    margin-bottom: 48px;
 }
 
 .about-section .about-text ul {
